samples/_failures_safe/1761092304_1c0633_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6c4b8cff.c: In function ‘main’:
./samples/SAFE/__tmp_6c4b8cff.c:164:12: error: missing terminating " character
  164 |     printf("Original size: %zu bytes\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_6c4b8cff.c:164:5: error: expected expression at end of input
  164 |     printf("Original size: %zu bytes\n
      |     ^~~~~~
./samples/SAFE/__tmp_6c4b8cff.c:164:5: error: expected declaration or statement at end of input
